# INE5454

./: example_out.json  output-2019-11-19.json  pyproject.toml  teste.json
graphs/: disease.py  disease_by_region.py  region.py
news/: extractors.py  items.py  settings.py
news/spiders/: __init__.py
plots/: disease_by_region.py
reviews/: items.py  middlewares.py  pipelines.py  settings.py
reviews/spiders/: __init__.py
