[tool.poetry]
name = "reviews"
version = "0.1.0"
description = ""
authors = ["caiopo <caiopoliveira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scrapy = "^1.7"
seaborn = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
